image gallery wide area

--- a/src/app/pastevent/eventcard/eventcard.component.html
+++ b/src/app/pastevent/eventcard/eventcard.component.html
@@ -25,14 +25,14 @@
                                      title, description and button.</p>
                                   <ul class="list-inline">
                                     <li class="list-inline-item">
-                                        <a class="social-icon text-xs-center" target="_blank" href="#">
-                                            <i class="fa fa-camera-retro fa-1x"><a href="pastevent/imageview/1"> Gallery</a></i>
+                                        <a class="social-icon text-xs-center" target="_blank" href="pastevent/imageview/1">
+                                            <i class="fa fa-camera-retro fa-1x"><a > Gallery</a></i>
                                         </a>
                                     </li>
                                     
                                     <li class="list-inline-item">
                                         <a class="social-icon text-xs-center" target="_blank" href="#">
-                                            <i class="fa fa-angle-double-down" aria-hidden="true">More</i>
+                                            <i (click)=event() class="fa fa-angle-double-down" aria-hidden="true">More</i>
                                         </a>
                                     </li>
                                   </ul>
@@ -66,14 +66,14 @@
                                    title, description and button.</p>
                                 <ul class="list-inline">
                                     <li class="list-inline-item">
-                                        <a class="social-icon text-xs-center" target="_blank" href="#">
-                                            <i class="fa fa-camera-retro fa-1x"><a href="pastevent/imageview/2"> Gallery</a></i>
+                                        <a class="social-icon text-xs-center" target="_blank" href="pastevent/imageview/2">
+                                            <i class="fa fa-camera-retro fa-1x"><a > Gallery</a></i>
                                         </a>
                                     </li>
                                     
                                     <li class="list-inline-item">
                                         <a class="social-icon text-xs-center" target="_blank" href="#">
-                                            <i class="fa fa-angle-double-down" aria-hidden="true">More</i>
+                                            <i (click)=event() class="fa fa-angle-double-down" aria-hidden="true">More</i>
                                         </a>
                                     </li>
                                 </ul>
@@ -107,14 +107,14 @@
                                    title, description and button.</p>
                                 <ul class="list-inline">
                                     <li class="list-inline-item">
-                                        <a class="social-icon text-xs-center" target="_blank" href="#">
-                                            <i class="fa fa-camera-retro fa-1x"><a href="pastevent/imageview/3"> Gallery</a></i>
+                                        <a class="social-icon text-xs-center" target="_blank" href="pastevent/imageview/3">
+                                            <i class="fa fa-camera-retro fa-1x"><a > Gallery</a></i>
                                         </a>
                                     </li>
                                     
                                     <li class="list-inline-item">
                                         <a class="social-icon text-xs-center" target="_blank" href="#">
-                                            <i class="fa fa-angle-double-down" aria-hidden="true">More</i>
+                                            <i (click)=event() class="fa fa-angle-double-down" aria-hidden="true">More</i>
                                         </a>
                                     </li>
                                     
@@ -129,7 +129,7 @@
         <!-- ./Team member -->
          
 
-         <a href="" class="">More</a>
+         <a href="pastevent/event" class="">More</a>
 
       </div>
   </div>
