--- a/src/app/SharePart/sidenavbar/sidenavbar.component.html
+++ b/src/app/SharePart/sidenavbar/sidenavbar.component.html
@@ -1,16 +1,59 @@
-<h2> Past Event</h2>
-                    <div class="btn-group-vertical  example-container">
-                            <button type="button" class="btn btn-secondary">2016 Event</button>
-                            <button type="button" class="btn btn-secondary">2017 Event</button>
-                            <button type="button" class="btn btn-secondary">2018 Event</button>
-                            <button type="button" class="btn btn-secondary">2019 Event</button>
-                            <div class="btn-group" role="group">
-                                    <button id="btnGroupDrop1" type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                     2020 Event
-                                    </button>
-                                    <div class="dropdown-menu" aria-labelledby="btnGroupDrop1">
-                                      <a class="dropdown-item" href="#">Cricket Match</a>
-                                      <a class="dropdown-item" href="#">Trip</a>
-                                    </div>
-                                  </div>
-                          </div>
+
+
+
+<nav id="navBar" class="navbar navbar-expand-lg navbar-dark ">
+
+  <img src="assets/_image/cslogo.png" id="navbarimage">CreativeEvent
+
+<a class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+  <span class="navbar-toggler-icon"></span>
+</a>
+<div class="collapse navbar-collapse" id="navbarText">
+  <ul class="navbar-nav mr-auto">
+
+    <li class="nav-item active">
+      <a class="nav-link" routerLink="/profile/home" routerLinkActive="active">Home </a>
+    </li>
+    <li class="nav-item">
+      <a *ngIf="islogged" class="nav-link" routerLink="/trip" routerLinkActive="active">Past Events</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" routerLink="/profile/list" routerLinkActive="active ">Members</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" routerLink="/task" routerLinkActive="active ">Task</a>
+    </li>
+    <li>
+        <a class="nav-link" routerLink="/profile/admin" routerLinkActive="active ">Admin page</a>
+   
+    </li>
+    <li class="nav-item dropdown" >
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+Events        </a>
+        <div id="drop" class="dropdown-menu " aria-labelledby="navbarDropdownMenuLink">
+          <a class="dropdown-item " href="">Annual Trip</a>
+          <a class="dropdown-item "  href="">Cricket Tournement</a>
+          <a class="dropdown-item " href="">Blood Donation</a>
+          <a class="dropdown-item " href="">Beach Party</a>
+          
+        </div>
+      </li>
+    <li>
+        <a class="nav-link" routerLink="/profile/admin" routerLinkActive="active ">Admin</a>
+   
+    </li>
+  </ul>
+   <li class="nav-item dropdown" >
+    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+     {{EmployeeName}}
+    </a>
+    <div id="drop" class="dropdown-menu " aria-labelledby="navbarDropdownMenuLink">
+      <a class="dropdown-item" href="/profile/profile">Profile</a>
+      <a class="dropdown-item" (click)="logout()" href="#">Log Out</a>
+      
+    </div>
+  </li>
+  <span class="navbar-text">
+ </span>
+</div>
+</nav>
