--- a/src/app/profile/homepage/homepage.component.css
+++ b/src/app/profile/homepage/homepage.component.css
@@ -1,21 +1,29 @@
 
 
 #homeback{
-    background-image: url("https://www.areinfotech.com/it-company/it-company-ahmedabad.jpeg");
+    background-image: url("http://www.pezproductions.ca/blog/wp-content/uploads/2015/07/corp-event.jpg");
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
     text-align: center;
+    
 }
 #part0{
    background-color: rgba(0, 0, 0, 0.5);
    height: 750px;
 }
+#mainH{
+    width: 40%;
+    margin-left: 10%;
+    border:solid 8px
+    
+}
 #part1{
-    background-color: rgb(196,199,199);
+    background-color: rgba(196, 199, 199, 0.671);
     height: 750px;
     padding: 20px;
+    
  }
  #part2{
     background-color: rgb(240, 241, 241);
@@ -74,25 +82,30 @@
 }
 
 #cardDesk img{
-    width: 20%;
-     margin-left: 40%    
+    
+    margin-left: 10%    
  }
- #cardDesk .card-deck{
-     margin-left: 10%;
-     margin-right: 10%;
-     margin-top: 2%
+ /* #cardDesk .card-deck{
+     margin-left: 20%;
+     margin-right: 20%;
+     margin-top: 2%;
+
  
+ } */
+ .row{
+     padding: 10%
  }
  
  #cardDesk .card {
      box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
      transition: 0.5s all ease-in-out;
-     width: 40%;
-     height: 400px;
-     border-bottom-left-radius: 30%;
+     width: 20%;
+     height: 20%;
+
+     /* border-bottom-left-radius: 30%; */
      /* border-top-right-radius: 30%; */
  }
-#card1{
+/* #card1{
     top: 0em;
 }
 #card2{
@@ -100,19 +113,34 @@
 }
 #card3{
     top: 10em;
-}
- #cardDesk .card:hover {
+} */
+
+/*card deck css*/
+.marketing .col-lg-4 {
+    margin-bottom: 1.5rem;
+    text-align: center;
+  }
+  .marketing h2 {
+    font-weight: 400;
+  }
+  .marketing .col-lg-4 p {
+    margin-right: .75rem;
+    margin-left: .75rem;
+  }
+  
+
+#cardDesk .card:hover {
      box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
      width: 42%;
      transform: scale(1.05);
  }
  
- #cardDesk .container {
-     padding: 2px 16px;
- }
+ /* #cardDesk .container {
+     padding: 2px 1px;
+ } */
 
  #bottomright{
-     color: aliceblue;
+    color: aliceblue;
     position: absolute;
     right: 10%;
     top: 20%;
