add css to forms

--- a/src/app/events/CricketMatch/details-view/details-view.component.html
+++ b/src/app/events/CricketMatch/details-view/details-view.component.html
@@ -47,6 +47,9 @@
         <div class="col-2"></div>
 
     </div> 
-         
+
+    <button type="button" id="update" <!--(click)="updateteam(team.teamId)"-->><img src="assets/edit.png"></button>
+    <button type="button" id="delete" <!--(click)=deleteteam(i.empId)-->><img src="assets/delete.png"></button>
+
 </div>
     
