--- a/src/app/events/CricketMatch/front-page/front-page.component.html
+++ b/src/app/events/CricketMatch/front-page/front-page.component.html
@@ -4,13 +4,13 @@
         <h1 id="main-topic">{{result.criEventMainTopic}}</h1>
   </div>
   <div class="col-2">
-    <ul class="navbar-nav mr-auto">
+    <ul class="navbar-nav mr-auto"> 
         <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Registor</a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" [routerLink]="['/CricketMatch/teamform']" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Cricket Team</a>
-            <a class="dropdown-item" [routerLink]="['/CricketMatch/employeeform']" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Employee Participation</a>
-            <a class="dropdown-item" [routerLink]="['/CricketMatch/detailsview']" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Details of cricket</a>
+            <a class="dropdown-item" [routerLink]="['CricketMatch/teamform']" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Cricket Team</a>
+            <a class="dropdown-item" [routerLink]="['CricketMatch/employeeform']" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Employee Participation</a>
+            <a class="dropdown-item" [routerLink]="['CricketMatch/detailsview']" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Details of cricket</a>
             </div>
         </li>
     </ul>
@@ -86,3 +86,7 @@
       </div>
       <div class="col-1"></div>
   </div>
+
+
+
+  
