--- a/src/app/events/CricketMatch/team-rc-view/team-rc-view.component.html
+++ b/src/app/events/CricketMatch/team-rc-view/team-rc-view.component.html
@@ -30,13 +30,11 @@
             <!-- <td>{{team.criTeamParticipations}}</td>
             <td>{{team.criTeamVegitarion}}</td>
             <td>{{team.criTeamNonVegitarion}}</td> -->
-            <td><button type="button" id="update" class="btn btn-success" (click)="updateteam(team.teamId)">Update</button></td>
-            <td><button type="button" id="delete" class="btn btn-danger" (click)=deleteteam(i.empId)>Delete</button></td>
+            <td><button type="button" id="update" <!--(click)="updateteam(team.teamId)" -->><img src="assets/edit.png"></button></td>
+            <td><button type="button" id="delete" <!--(click)=deleteteam(i.empId)-->><img src="assets/delete.png"></button></td>
           </tr>
         </tbody>
       </table>
     </div>
   </div>
 </div>
-
-<button type="button" id="update" class="btn btn-success" (click)="redirectToUpdatePage(owner.id)">Update</button>
