--- a/src/app/events/event-home-page/event-home-page.component.html
+++ b/src/app/events/event-home-page/event-home-page.component.html
@@ -1,34 +1,4 @@
-
-
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-   
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarText">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" routerLink="/cricket" routerLinkActive="active ">Cricket </a>
-        </li>
-        <li class="nav-item">
-          <a *ngIf="islogged" class="nav-link" routerLink="/trip" routerLinkActive="active ">Trip </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/profile/list" routerLinkActive="active ">Show Employee</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/profile/login" routerLinkActive="active ">Login User</a>
-        </li>
-        <li>
-            <a class="nav-link" routerLink="/profile/admin" routerLinkActive="active ">Admin page</a>
-       
-        </li>
-      </ul>
-      
-      <span class="navbar-text">
-     </span>
-    </div>
-  </nav>
+<app-header2></app-header2>
 
 
   <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
