--- a/src/app/pastevent/imageupload/imageupload.component.html
+++ b/src/app/pastevent/imageupload/imageupload.component.html
@@ -1,15 +1,6 @@
-<!-- <div class="card">
-  <h5 class="card-header">
-    <h2> Create a new role</h2>
-  </h5>
-  <div class="card-body">
-    <h5 class="card-title">
-      <h3 id="msg">{{Message}}</h3>
-    </h5>
 
-  </div>
-</div> -->
-<app-logged-header></app-logged-header>
+<app-header1></app-header1>
+<!-- <app-logged-header></app-logged-header> -->
 
 <div class="fff">
   <li class="nav-item">
