--- a/src/app/pastevent/imageview/imageview.component.html
+++ b/src/app/pastevent/imageview/imageview.component.html
@@ -4,7 +4,8 @@
 
 <!-- ########################### NEW PART  1   ##################################  -->
 
-<app-logged-header></app-logged-header>
+<app-header1></app-header1>
+<!-- <app-logged-header></app-logged-header> -->
 
 <li class="nav-item">
   <div class="row">
