--- a/src/app/pastevent/sidebar/sidebar.component.html
+++ b/src/app/pastevent/sidebar/sidebar.component.html
@@ -1,4 +1,5 @@
-<app-logged-header></app-logged-header>
+<app-header1></app-header1>
+<!-- <app-logged-header></app-logged-header> -->
 <div class="form-row">
   <div class="form-group col-md-2">
 
