--- a/src/app/pastevent/uploadpastevent/uploadpastevent.component.html
+++ b/src/app/pastevent/uploadpastevent/uploadpastevent.component.html
@@ -1,4 +1,5 @@
-<app-logged-header></app-logged-header>
+<app-header1></app-header1>
+<!-- <app-logged-header></app-logged-header> -->
 <div class="card">
     <h5 class="card-header">
         <h2>Make A Brief Summary of Campaign</h2>
