--- a/src/app/pastevent/budget/budget.component.html
+++ b/src/app/pastevent/budget/budget.component.html
@@ -1,4 +1,5 @@
-<app-logged-header></app-logged-header>
+<app-header1></app-header1>
+<!-- <app-logged-header></app-logged-header> -->
 <p>
   budget works!
 </p>
