--- a/src/app/profile/Department/department-create/department-create.component.html
+++ b/src/app/profile/Department/department-create/department-create.component.html
@@ -1,9 +1,20 @@
 
-<div class="card">
-        <h5 class="card-header"> <h2>Create a new Department</h2></h5>
-        <div class="card-body">
-          <h5 class="card-title"><h3 id="msg">{{Message}}</h3></h5>
-          <form [formGroup]="departmentForm" autocomplete="off" novalidate (ngSubmit)="createdepartment(departmentForm.value)">
+
+
+
+      <div >
+        
+        <div  class="wrapper fadeInDown col-md-12 container">
+          <div id="formContent">
+            <!-- Tabs Titles -->
+        
+            <!-- Icon -->
+            <div class="fadeIn first">
+              <h1>Create Department</h1>
+            </div>
+            <h5 class="card-title"> <h3 id="msg">{{Message}}</h3></h5>
+            <!-- Sign up Form -->
+            <form [formGroup]="departmentForm" autocomplete="off" novalidate (ngSubmit)="createdepartment(departmentForm.value)">
                 <div class="form-group">
                     <label for="email" class="sr-only">DepartmentId</label>
                     <input class="form-control" formControlName="departmentId" id="departmentId" placeholder="Department Id">
@@ -24,6 +35,19 @@
                 
             </div> 
             </form>  
+                <!-- <div class="copy-text">For Create new account? <i class="fa fa-heart"></i><a id="crateAccountlink"  (click)="crateAccount()"> Create</a></div> -->
+                
+            <!-- Remind Passowrd -->
+            <div id="formFooter">
+              <a  id="crateAccountlink"  class="underlineHover" ></a>
+             
+            </div>
+        
+          </div>
         </div>
-      </div>
-
+    
+    
+        </div>
+    
+    
+    
