--- a/src/app/task/update-task/update-task.component.html
+++ b/src/app/task/update-task/update-task.component.html
@@ -1,5 +1,6 @@
 
-<app-logged-header></app-logged-header>
+<!-- <app-logged-header></app-logged-header> -->
+<app-loging-header></app-loging-header>
 <section class="testimonial py-5" id="testimonial">
     <div class="container">
         <div class="row ">
