--- a/src/app/profile/homepage/homepage.component.html
+++ b/src/app/profile/homepage/homepage.component.html
@@ -44,23 +44,24 @@
         </div> -->
         <div class="row">
             <div class="col-lg-4">
-              <img class="rounded-circle" src="assets\_image\event.png" alt="Generic placeholder image" width="140" height="140">
+              <img class="rounded-circle" src="assets\_image\past.jpg" alt="Generic placeholder image" width="140" height="140">
               <h2>Beach Party</h2>
               <p>Visit here to see all upcomming events of the company.You can grab your chance to participate to the event by submiting the forum.You can enjoy your day with family members</p>
               <p><a class="btn btn-secondary" href="#" role="button" (click)="Events()">View details &raquo;</a></p>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4">
-              <img class="rounded-circle" src="assets\_image\past.jpg" alt="Generic placeholder image" width="140" height="140">
+              <img class="rounded-circle" src="assets\_image\event.png" alt="Generic placeholder image" width="140" height="140">
               <h2>Annual trip</h2>
               <p>Visit here to see recently closed events and their details.You can get more details from here.Can generate reports easily.You can visit here to get Contact details of previous event also includes here</p>
               <p><a class="btn btn-secondary" href="#" role="button" (click)="pastEvent()">View details &raquo;</a></p>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4">
-              <img class="rounded-circle" src="assets\_image\t.jpg" alt="Generic placeholder image" width="140" height="140">
+              <img class="rounded-circle" src="assets\_image\yearend.jpg" alt="Generic placeholder image" width="140" height="140">
               <h2>Year End Part</h2>
               <p>Visit here to see your task and all assign tasks categorized by evets.Also an overview of tasks.Assigned tasks for employees can do here.And also can manage them.RC can upload their details see all</p>
               <p><a class="btn btn-secondary" role="button" (click)="Task()">View details &raquo;</a></p>
             </div><!-- /.col-lg-4 -->
+            <a id="txt">More..</a>
           </div>
         
         
@@ -69,7 +70,52 @@
 
 </div>
 
+
+
+<!-- part 2 -->
+
 <div id="part2">
+    <h1 id="head">PAST EVENTS</h1>
+      <div id="cardDesk" class="card-deck" >
+          <!-- <div id="card1" class="card">
+            <img class="card-img-top" src="assets\_image\employees_card_31256.png" alt="Card image cap">
+            <div class="card-body">
+              <a href="/task/addtask"><h5 class="card-title">Up comming Events</h5></a> 
+              <p class="card-text">Assign tasks to RC members, get notified when task is updated or completed</p>
+            </div>
+          </div> -->
+          <div class="row">
+              <div class="col-lg-4">
+                <img class="rounded-circle" src="assets\_image\c.jpg" alt="Generic placeholder image" width="140" height="140">
+                <h2>Creative Sixes</h2>
+                <p>Visit here to see all upcomming events of the company.You can grab your chance to participate to the event by submiting the forum.You can enjoy your day with family members</p>
+                <p><a class="btn btn-secondary" href="#" role="button" (click)="Events()">View details &raquo;</a></p>
+              </div><!-- /.col-lg-4 -->
+              <div class="col-lg-4">
+                <img class="rounded-circle" src="assets\_image\b.jpg" alt="Generic placeholder image" width="140" height="140">
+                <h2>Blood Donation</h2>
+                <p>Visit here to see recently closed events and their details.You can get more details from here.Can generate reports easily.You can visit here to get Contact details of previous event also includes here</p>
+                <p><a class="btn btn-secondary" href="#" role="button" (click)="pastEvent()">View details &raquo;</a></p>
+              </div><!-- /.col-lg-4 -->
+              <div class="col-lg-4">
+                <img class="rounded-circle" src="assets\_image\p.jpg" alt="Generic placeholder image" width="140" height="140">
+                <h2>Creative Anniversary</h2>
+                <p>Visit here to see your task and all assign tasks categorized by evets.Also an overview of tasks.Assigned tasks for employees can do here.And also can manage them.RC can upload their details see all</p>
+                <p><a class="btn btn-secondary" role="button" (click)="Task()">View details &raquo;</a></p>
+              </div><!-- /.col-lg-4 -->
+              <a id="txt">More..</a>
+            </div>
+          
+          
+          
+        </div>
+  
+  </div>
+
+<!-- end of part 2 -->
+
+
+<div id="part3">
     <footer class="pt-4 my-md-5 pt-md-5 border-top">
         <div class="row">
           <div class="col-12 col-md">
